--- a/package.json
+++ b/package.json
@@ -1,9 +1,12 @@
 {
-  "name": "atm_project",
+  "name": "bm_atm_project",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "type": "module",
+  "bin" : {
+    "bm_atm":"dist/atm.js"
+  },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
